--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>my second github repo</title>
 </head>
 <body>
-    
+    <h1>i can push code github</h1>
+    <h2>my name is foysal</h2>
+    <h3>new code change</h3>
 </body>
 </html>
